[metadata]
name = plotnine3d
description = 3D geoms for plotnine (grammar of graphics in Python)
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/krassowski/plotnine3d/issues
    Source Code = https://github.com/krassowski/plotnine3d
license = MIT license
license_file = LICENSE
author = Michał Krassowski
version = attr: plotnine3d.__version__
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: MacOS
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Matplotlib
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.9

install_requires =
    matplotlib
    plotnine >=1.3.0
